# ncmconverter

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/ncmpp/ncmpp_flutter/: MainActivity.kt
lib/: main.dart
lib/src/core/: ncm_dump.dart
lib/src/ffi/: ncm_decoder.dart
lib/src/models/: ncm_file.dart
lib/src/screens/: home_screen.dart  settings_screen.dart
lib/src/services/: isolate_pool.dart  ncm_decoder.dart  settings_service.dart
lib/widgets/: progress_card.dart
native/: CMakeLists.txt  ncm_ffi.cpp  ncm_ffi.h
native/ncmlib/include/ncmlib/: ncmdump.h
native/ncmlib/src/: ncmdump.cpp
windows/runner/: Runner.rc  main.cpp
